--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <!-- This uses-feature appears twice, consider removing one if redundant -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -19,6 +20,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <!-- NEW: Required for posting notifications on Android 13 (API 33) and higher -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 
     <application
