--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,6 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <!-- This uses-feature appears twice, consider removing one if redundant -->
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
@@ -67,6 +62,15 @@
         <service
             android:name=".Services.LocationTrackingService"
             android:foregroundServiceType="location" />
+
+        <!-- NEW: Declare Firebase Cloud Messaging Service -->
+        <service
+            android:name=".Services.TeamSyncFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
